[package]
name = "enum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
opt-level = "s"
lto = true

# [profile.dev]
# codegen-units = 1
# lto = true

[dependencies]
leptos = { version = "0.5.4", features = ["csr"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1.7"
icondata = { path = "../../icondata" }
icondata_core = "0.0.2"
